# UniMCP

./: .gitignore  CURRENT_ARCHITECTURE.md  ISSUES.md  PROJECT_CRITIQUE_AND_ROADMAP.md  QUICKSTART.md  README.md  UniMCP_Agent_Guide.md  claude.txt  newarch.md  pyproject.toml  requirements-dev.txt  test_stdio_client.py  user_data.json
Examples/: .env.nim  demo_session.json  full_implementation_demo.py  temp_nim.py  test_openai_compatibility.py  user_data.json
docs/: CONTRIBUTING.md  SESSION_MANAGEMENT.md
reference/: client.py  client2.py  client_architecture.md  server.py
sessions/: example_conversation.json
src/unimcp/: __init__.py  cli.py  client.py  constants.py  dashboard.py  exceptions.py  generator.py  interactive.py  llm.py
src/unimcp/session/: __init__.py  session.py  storage.py
src/unimcp/web/: server.py
src/unimcp/web/static/: index.html
src/unimcp/web/static/css/: style.css
src/unimcp/web/static/js/: app.js  forms.js
tests/: README_TESTS.md  example_chat.py  example_session.py  sc.py  test_all_features.py  test_errors.py  test_gemini_endpoints.py  test_interactive_class.py  test_interactive_pythonic.py  test_llm_config.py  test_non_streaming.py  test_server.py  test_stdio_client.py  test_streaming.py
