[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unimcp"
version = "0.3.0"
description = "A simple client library to connect to any MCP server and interact with LLMs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Chandan Kumar Barad", email = "chandanbarada2@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp==1.27.0",
    "openai==2.33.0",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/barada02/UniMCP"
"Bug Tracker" = "https://github.com/barada02/UniMCP/issues"

[project.scripts]
unimcp-chat = "unimcp.cli:main"
